# design-parity-checker

./: AGENTS.md  CLAUDE.md  Cargo.toml  PRODUCT_SPECIFICATION.md  README.md
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: README.md  ci_cheatsheet.md  cli_usage.md  config.md  dev_setup.md  metrics_overview.md  normalized_view.md  output_schema.md  reporting.md  testing_plan.md  troubleshooting.md
src/: browser.rs  cli.rs  config.rs  error.rs  figma.rs  formatting.rs  image_loader.rs  lib.rs  main.rs  metrics.rs  output.rs  pipeline.rs  settings.rs  types.rs
src/commands/: compare.rs  mod.rs  quality.rs
src/figma/: tests.rs
src/metrics/: clustering.rs  color.rs  content.rs  layout.rs  mod.rs  pixel.rs  scoring.rs  semantic.rs  tests.rs  typography.rs
src/types/: core.rs  dom.rs  figma.rs  metric_results.rs
tests/: cli_exit_codes.rs  cli_stubs.rs  compare_integration.rs
